--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
         <section class="glass">
             <div class="dashboard">
                 <div class="user">
+                <!--
                     <div class="face"></div>
+                -->
+                    <img src="./resources/BZK.jpg" class="face"></>
                 </div>
                 <div class="links">
                     <h1 class="m-title">Edin Basic</h1>
-                    <h2 class="m-title">Web Developer</h2>
+                    <h2 class="m-title">Web Dev</h2>
                    
                     <div class="link">
                         <img src="" alt="">
@@ -60,13 +63,12 @@
             <div class="bio">
                 <div class="name status">
                     <h1>Edin Basic</h1>
-                    <h2 class="subtitle">Web Developer</h2>
+                    <h2 class="subtitle">Web Dev</h2>
                 </div>
                 <div class="cards">
                     <div class="card">
                         <h2 class="initial">WordPress</h2>
-                        <a href="www.github.com" class="aftermath"><h2>Code</h2></a>
-                        <a href="www.github.com" class="aftermath demo"><h2>Demo</h2></a>
+                        <a href="https://truhkers.com/" target="_blank" class="aftermath"><h2>Demo</h2></a>
                         <div class="pro"><h3>>>></h3></div>
                     </div>
                     <div class="card">
